--- a/Contributors.html
+++ b/Contributors.html
@@ -234,6 +234,8 @@
 <a class="box-item" href="https://github.com/matheusdaluz"><span>Matheus da Luz</span></a>  
 	      <a class="box-item" href="https://github.com/cheetosmaster"><span>cheetosmaster</span></a>  
 
+	      <a class="box-item" href="https://github.com/faizalanwar"><span>faizalanwar</span></a>  
+
 
       </div>
     </div>
