--- a/Contributors.html
+++ b/Contributors.html
@@ -198,19 +198,17 @@
         <a class="box-item" href="https://github.com/tuminzee"><span>Tumin Sheth</span></a>
         <a class="box-item" href="https://github.com/Shikhar253"><span>Shikhar Saxena</span></a>
         <a class="box-item" href="https://github.com/rasyidzkun"><span>Ar Rasyid Sarifullah</span></a>
-
         <a class="box-item" href="https://github.com/RheaAdh"><span>Rhea Adhikari</span></a>
         <a class="box-item" href="https://github.com/SDGraph"><span>SD Graph</span></a>
         <a class="box-item" href="https://github.com/abhijeetaman007"><span>Abhijeet Sinha</span></a>
         <a class="box-item" href="https://github.com/keerays"><span>Keerays</span></a>
         <a class="box-item" href="https://github.com/skully-coder"><span>Abhinav Agrawal</span></a>
         <a class="box-item" href="https://github.com/Red-0111"><span>Rudransh</span></a>
-
-      <a class="box-item" href="https://github.com/sreelakshmig009"><span>G Sreelakshmi</span></a>
-      <a class="box-item" href="https://github.com/dhruvil-shah"><span>Dhruvil Shah</span></a>
-      <a class="box-item" href="https://github.com/7suyash7"><span>Suyash Nayan</span></a>
-      <a class="box-item" href="https://github.com/MananAg29"><span>Manan</span></a>
-      <a class="box-item" href="https://github.com/VishweshPatel"><span>Vishwesh Patel</span></a>
+      	<a class="box-item" href="https://github.com/sreelakshmig009"><span>G Sreelakshmi</span></a>
+     	<a class="box-item" href="https://github.com/dhruvil-shah"><span>Dhruvil Shah</span></a>
+     	<a class="box-item" href="https://github.com/7suyash7"><span>Suyash Nayan</span></a>
+      	<a class="box-item" href="https://github.com/MananAg29"><span>Manan</span></a>
+      	<a class="box-item" href="https://github.com/VishweshPatel"><span>Vishwesh Patel</span></a>
         <a class="box-item" href="https://github.com/sreelakshmig009"><span>G Sreelakshmi</span></a>
         <a class="box-item" href="https://github.com/dhruvil-shah"><span>Dhruvil Shah</span></a>
         <a class="box-item" href="https://github.com/7suyash7"><span>Suyash Nayan</span></a>
@@ -218,22 +216,20 @@
         <a class="box-item" href="https://github.com/achromik"><span>Aleksander Chromik</span></a>
         <a class="box-item" href="https://github.com/osamakhan552"><span>Osama Khan</span></a>
         <a class="box-item" href="https://github.com/dynle"><span>Dynle</span></a>
-      <a class="box-item" href="https://github.com/osamakhan552"><span>Osama Khan</span></a>
-      <a class="box-item" href="https://github.com/dynle"><span>Dynle</span></a>
-
+      	<a class="box-item" href="https://github.com/osamakhan552"><span>Osama Khan</span></a>
+      	<a class="box-item" href="https://github.com/dynle"><span>Dynle</span></a>
         <a class="box-item" href="https://github.com/Krutarth06"><span>Krutarth Trivedi</span></a>
-      <a class="box-item" href="https://github.com/Lukman350"><span>Lukman</span></a>
-	      <a class="box-item" href="https://github.com/ShreyaChopra13"><span>Shreya </span></a>
+      	<a class="box-item" href="https://github.com/Lukman350"><span>Lukman</span></a>
+	<a class="box-item" href="https://github.com/ShreyaChopra13"><span>Shreya </span></a>
 	<a class="box-item" href="https://github.com/adarshraghav"><span>Adarsh Raghav</span></a>
 	<a class="box-item" href="https://github.com/akash-10-23"><span>Akash Ratan Verma</span></a>
 	<a class="box-item" href="https://github.com/ana2407"><span>Vibhuti Negi</span></a>
 	<a class="box-item" href="https://github.com/ananya2407"><span>Ananya Sajwan</span></a>
-
-  <a class="box-item" href="https://github.com/husinassegaff"><span>Husin Muhammad Assegaff</span></a>
-<a class="box-item" href="https://github.com/doniambarita"><span>Doni Ambarita</span></a>
-<a class="box-item" href="https://github.com/matheusdaluz"><span>Matheus da Luz</span></a>  
-	      <a class="box-item" href="https://github.com/cheetosmaster"><span>cheetosmaster</span></a>  
-
+  	<a class="box-item" href="https://github.com/husinassegaff"><span>Husin Muhammad Assegaff</span></a>
+	<a class="box-item" href="https://github.com/doniambarita"><span>Doni Ambarita</span></a>
+	<a class="box-item" href="https://github.com/matheusdaluz"><span>Matheus da Luz</span></a>  
+	<a class="box-item" href="https://github.com/cheetosmaster"><span>cheetosmaster</span></a>  
+	<a class="box-item" href="https://github.com/ramadh-an"><span>Nukholis Ramadhan</span></a>
 
       </div>
     </div>
