add name to contributors.html

--- a/Contributors.html
+++ b/Contributors.html
@@ -231,6 +231,7 @@
 	<a class="box-item" href="https://github.com/cheetosmaster"><span>cheetosmaster</span></a>  
 	<a class="box-item" href="https://github.com/ramadh-an"><span>Nukholis Ramadhan</span></a>
 	  <a class="box-item" href="https://github.com/ialexanderbrito"><span>Alexander</span></a>
+	  <a class="box-item" href="https://github.com/chaitanyatekane"><span>Chaitanya</span></a>
 
       </div>
     </div>
