--- a/Contributors.html
+++ b/Contributors.html
@@ -230,7 +230,8 @@
 	<a class="box-item" href="https://github.com/matheusdaluz"><span>Matheus da Luz</span></a>  
 	<a class="box-item" href="https://github.com/cheetosmaster"><span>cheetosmaster</span></a>  
 	<a class="box-item" href="https://github.com/ramadh-an"><span>Nukholis Ramadhan</span></a>
-	  <a class="box-item" href="https://github.com/ialexanderbrito"><span>Alexander</span></a>
+	<a class="box-item" href="https://github.com/ialexanderbrito"><span>Alexander</span></a>
+	<a class="box-item" href="https://github.com/SukritSethi"><span>Sukrit Sethi</span></a>
 
       </div>
     </div>
