--- a/Contributors.html
+++ b/Contributors.html
@@ -232,7 +232,7 @@
 	<a class="box-item" href="https://github.com/ramadh-an"><span>Nukholis Ramadhan</span></a>
 	<a class="box-item" href="https://github.com/ialexanderbrito"><span>Alexander</span></a>
 	<a class="box-item" href="https://github.com/SukritSethi"><span>Sukrit Sethi</span></a>
-
+	<a class="box-item" href="https://github.com/vishalhacker"><span>vishal hacker</span></a>
       </div>
     </div>
 </div>
