--- a/Contributors.html
+++ b/Contributors.html
@@ -238,6 +238,7 @@
         	<a class="box-item" href="https://github.com/SukritSethi"><span>Sukrit Sethi</span></a>
 	      <a class="box-item" href="https://github.com/faizalanwar"><span>faizalanwar</span></a> 
 	  <a class="box-item" href="https://github.com/chaitanyatekane"><span>Chaitanya</span></a>
+	  <a class="box-item" href="https://github.com/adityakumar48"><span>Visinigiri Aditya</span></a>
 
 
       </div>
