--- a/Contributors.html
+++ b/Contributors.html
@@ -203,28 +203,23 @@
         <a class="box-item" href="https://github.com/keerays"><span>Keerays</span></a>
         <a class="box-item" href="https://github.com/skully-coder"><span>Abhinav Agrawal</span></a>
         <a class="box-item" href="https://github.com/Red-0111"><span>Rudransh</span></a>
-
       	<a class="box-item" href="https://github.com/sreelakshmig009"><span>G Sreelakshmi</span></a>
       	<a class="box-item" href="https://github.com/dhruvil-shah"><span>Dhruvil Shah</span></a>
-     	  <a class="box-item" href="https://github.com/7suyash7"><span>Suyash Nayan</span></a>
+     	<a class="box-item" href="https://github.com/7suyash7"><span>Suyash Nayan</span></a>
       	<a class="box-item" href="https://github.com/MananAg29"><span>Manan</span></a>
       	<a class="box-item" href="https://github.com/VishweshPatel"><span>Vishwesh Patel</span></a>
-
         <a class="box-item" href="https://github.com/sreelakshmig009"><span>G Sreelakshmi</span></a>
         <a class="box-item" href="https://github.com/dhruvil-shah"><span>Dhruvil Shah</span></a>
         <a class="box-item" href="https://github.com/7suyash7"><span>Suyash Nayan</span></a>
         <a class="box-item" href="https://github.com/MananAg29"><span>Manan</span></a>
         <a class="box-item" href="https://github.com/achromik"><span>Aleksander Chromik</span></a>
-
         <a class="box-item" href="https://github.com/osamakhan552"><span>Osama Khan</span></a>
-      <a class="box-item" href="https://github.com/ShreyaChopra13"><span>Shreya Chopra</span></a>
+        <a class="box-item" href="https://github.com/ShreyaChopra13"><span>Shreya Chopra</span></a>
         <a class="box-item" href="https://github.com/dynle"><span>Dynle</span></a>
         <a class="box-item" href="https://github.com/osamakhan552"><span>Osama Khan</span></a>
         <a class="box-item" href="https://github.com/dynle"><span>Dynle</span></a>
         <a class="box-item" href="https://github.com/Krutarth06"><span>Krutarth Trivedi</span></a>
-
       	<a class="box-item" href="https://github.com/Lukman350"><span>Lukman</span></a>
-
 	<a class="box-item" href="https://github.com/ShreyaChopra13"><span>Shreya </span></a>
 	<a class="box-item" href="https://github.com/adarshraghav"><span>Adarsh Raghav</span></a>
 	<a class="box-item" href="https://github.com/akash-10-23"><span>Akash Ratan Verma</span></a>
@@ -235,20 +230,17 @@
 	<a class="box-item" href="https://github.com/matheusdaluz"><span>Matheus da Luz</span></a>  
 	<a class="box-item" href="https://github.com/cheetosmaster"><span>cheetosmaster</span></a>  
 	<a class="box-item" href="https://github.com/ramadh-an"><span>Nukholis Ramadhan</span></a>
-
-	  <a class="box-item" href="https://github.com/ialexanderbrito"><span>Alexander</span></a>
-	 <a class="box-item" href="https://github.com/vb03823"><span>vishal</span></a>
-
-       <a class="box-item" href="https://github.com/rishabhrathore055"><span>Rishabh Rathore</span></a>
-        	<a class="box-item" href="https://github.com/SukritSethi"><span>Sukrit Sethi</span></a>
-	      <a class="box-item" href="https://github.com/faizalanwar"><span>faizalanwar</span></a> 
-	  <a class="box-item" href="https://github.com/chaitanyatekane"><span>Chaitanya</span></a>
-      <a class="box-item" href="https://github.com/srdevelopervishal"><span>vishal</span></a>
+	<a class="box-item" href="https://github.com/ialexanderbrito"><span>Alexander</span></a>
+        <a class="box-item" href="https://github.com/rishabhrathore055"><span>Rishabh Rathore</span></a>
+       	<a class="box-item" href="https://github.com/SukritSethi"><span>Sukrit Sethi</span></a>
+        <a class="box-item" href="https://github.com/faizalanwar"><span>faizalanwar</span></a> 
+        <a class="box-item" href="https://github.com/chaitanyatekane"><span>Chaitanya</span></a>
+        <a class="box-item" href="https://github.com/srdevelopervishal"><span>vishal</span></a>
         <a class="box-item" href="https://github.com/aaq007"><span>Aaqil Shihab</span></a>
- <a class="box-item" href="https://github.com/OmanshArora"><span>Omansh</span></a>
-       <a class="box-item" href="https://github.com/todoroki07"><span>Rufus</span></a>
-      <a class="box-item" href="https://github.com/shinigamiii07"><span>Trideep</span></a>
-        
+        <a class="box-item" href="https://github.com/OmanshArora"><span>Omansh</span></a>
+        <a class="box-item" href="https://github.com/todoroki07"><span>Rufus</span></a>
+        <a class="box-item" href="https://github.com/shinigamiii07"><span>Trideep</span></a>
+        <!-- Please maintain the alignment... -->
 
       </div>
     </div>
