--- a/Contributors.html
+++ b/Contributors.html
@@ -250,7 +250,7 @@
       <a class="box-item" href="https://github.com/Brougud"><span>Monke</span></a>
        <a class="box-item" href="https://github.com/adityakumar48"><span>Visinigiri Aditya</span></a>
 
-
+  <!-- Please maintain the alignment... -->
 
       </div>
     </div>
