--- a/Contributors.html
+++ b/Contributors.html
@@ -242,7 +242,7 @@
 	  <a class="box-item" href="https://github.com/chaitanyatekane"><span>Chaitanya</span></a>
       <a class="box-item" href="https://github.com/srdevelopervishal"><span>vishal</span></a>
         <a class="box-item" href="https://github.com/aaq007"><span>Aaqil Shihab</span></a>
-
+	<a class="box-item" href="https://github.com/Chia2712"><span>Srishti Mittal</span></a>
 
       </div>
     </div>
