--- a/Contributors.html
+++ b/Contributors.html
@@ -244,6 +244,7 @@
         <a class="box-item" href="https://github.com/Brougud"><span>Monke</span></a>
         <a class="box-item" href="https://github.com/adityakumar48"><span>Visinigiri Aditya</span></a>
         <a class="box-item" href="https://github.com/Chia2712"><span>Srishti Mittal</span></a>
+        <a class="box-item" href="https://github.com/RahulRudra81"><span>Rahul Rudra</span></a>
 
         <!-- Please maintain the alignment... -->
 
