--- a/Contributors.html
+++ b/Contributors.html
@@ -245,6 +245,7 @@
         <a class="box-item" href="https://github.com/adityakumar48"><span>Visinigiri Aditya</span></a>
         <a class="box-item" href="https://github.com/Chia2712"><span>Srishti Mittal</span></a>
         <a class="box-item" href="https://github.com/RahulRudra81"><span>Rahul Rudra</span></a>
+        <a class="box-item" href="https://github.com/NavdeepSinghBagga"><span>Navdeep Singh Bagga</span></a>
 
         <!-- Please maintain the alignment... -->
 
