--- a/Contributors.html
+++ b/Contributors.html
@@ -246,6 +246,8 @@
         <a class="box-item" href="https://github.com/Chia2712"><span>Srishti Mittal</span></a>
         <a class="box-item" href="https://github.com/RahulRudra81"><span>Rahul Rudra</span></a>
         <a class="box-item" href="https://github.com/NavdeepSinghBagga"><span>Navdeep Singh Bagga</span></a>
+        <a class="box-item" href="https://github.com/tanishha"><span>Tanisha Chaudhary</span></a>
+
 
         <!-- Please maintain the alignment... -->
 
