--- a/Contributors.html
+++ b/Contributors.html
@@ -242,7 +242,7 @@
         <a class="box-item" href="https://github.com/NavdeepSinghBagga"><span>Navdeep Singh Bagga</span></a>
         <a class="box-item" href="https://github.com/tanishha"><span>Tanisha Chaudhary</span></a>
         <a class="box-item" href="https://github.com/malburo"><span>Malburo</span></a>
-        <a class="box-item" href="https://github.com/abhaygupta08"><span>Abhay Gupta</span></a>
+        <a class="box-item" href="https://github.com/kingketan9"><span>Abhay Gupta</span></a>
 
 
         <!-- Please maintain the alignment... -->
