--- a/Contributors.html
+++ b/Contributors.html
@@ -109,7 +109,7 @@
 
 
         <!-- Add to the bottom of the list -->
-            <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
+        <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
         <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
         <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
         <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
@@ -243,7 +243,7 @@
         <a class="box-item" href="https://github.com/tanishha"><span>Tanisha Chaudhary</span></a>
         <a class="box-item" href="https://github.com/malburo"><span>Malburo</span></a>
         <a class="box-item" href="https://github.com/kingketan9"><span>Abhay Gupta</span></a>
-
+        <a class="box-item" href="https://github.com/HarshitAditya27"><span>Harshit Aditya</span></a>
 
         <!-- Please maintain the alignment... -->
 
