--- a/Contributors.html
+++ b/Contributors.html
@@ -244,7 +244,8 @@
         <a class="box-item" href="https://github.com/malburo"><span>Malburo</span></a>
         <a class="box-item" href="https://github.com/kingketan9"><span>Abhay Gupta</span></a>
         <a class="box-item" href="https://github.com/ishaan-1n"><span>Ishaan</span></a>
-        <a class="box-item" href="https://github.com/manavg005"><span>Manav Gupta</span></a>
+        <a class="box-item" href="https://github.com/manavg005"><span>Manav Gupta</span></a> 
+        <a class="box-item" href="https://github.com/HarshitAditya27"><span>Harshit Aditya</span></a>
         <!-- Please maintain the alignment... -->
 
 
