--- a/Contributors.html
+++ b/Contributors.html
@@ -247,6 +247,7 @@
         <a class="box-item" href="https://github.com/ishaan-1n"><span>Ishaan</span></a>
         <a class="box-item" href="https://github.com/manavg005"><span>Manav Gupta</span></a> 
         <a class="box-item" href="https://github.com/HarshitAditya27"><span>Harshit Aditya</span></a>
+        <a class="box-item" href="https://github.com/kingketan9"><span>Ketan Goyal</span></a>
         <!-- Please maintain the alignment... -->
 
 
