--- a/Contributors.html
+++ b/Contributors.html
@@ -249,6 +249,7 @@
         <a class="box-item" href="https://github.com/HarshitAditya27"><span>Harshit Aditya</span></a>
         <a class="box-item" href="https://github.com/christianwidjayaa"><span>Christian Widjaya</span></a>
         <a class="box-item" href="https://github.com/kingketan9"><span>Ketan Goyal</span></a>
+        <a class="box-item" href="https://github.com/Davjot"><span>Davjot Singh</span></a>
 
         <!-- Please maintain the alignment... -->
 
