Python Web Scraping

--- a/Contributors.html
+++ b/Contributors.html
@@ -243,6 +243,7 @@
         <a class="box-item" href="https://github.com/tanishha"><span>Tanisha Chaudhary</span></a>
         <a class="box-item" href="https://github.com/malburo"><span>Malburo</span></a>
         <a class="box-item" href="https://github.com/kingketan9"><span>Abhay Gupta</span></a>
+        <a class="box-item" href="https://github.com/kushagra1912"><span>Kushagra Agrawal</span></a>
 
 
         <!-- Please maintain the alignment... -->
