--- a/Contributors.html
+++ b/Contributors.html
@@ -109,7 +109,8 @@
 
 
         <!-- Add to the bottom of the list -->
-            <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
+        <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
+        <a class="box-item" href="https://github.com/Prajit-Sengupta"><span>Prajit Sengupta</span></a>
         <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
         <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
         <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
