--- a/Contributors.html
+++ b/Contributors.html
@@ -253,7 +253,7 @@
         <a class="box-item" href="https://github.com/kushagra1912"><span>Kushagra Agrawal</span></a>
         <a class="box-item" href="https://github.com/AyushAKumar-19"><span>Ayush Abhishek Kumar</span></a>
         <a class="box-item" href="https://github.com/Prajit-Sengupta"><span>Prajit Sengupta</span></a>
-
+        <a class="box-item" href="https://github.com/alkaz1"><span>Alka Maurya</span></a>
 
         <!-- Please maintain the alignment... -->
 
