--- a/Contributors.html
+++ b/Contributors.html
@@ -96,8 +96,8 @@
       <div class="heart"></div>
       <div class="wrapper">
         <div>
-          <h1 class="heading animated rubberBand delay-4s">Contributors</h1>
-          <p class="moto animated rubberBand delay-4s">Add yourself to the list if you contribute.</p>
+          <h1 class="animated rubberBand delay-4s">Contributors</h1>
+          <p class="animated rubberBand delay-4s">Add yourself to the list if you contribute.</p>
         </div>
         <label class="theme-switch" for="checkbox">
           <input type="checkbox" id="checkbox" />
@@ -255,7 +255,7 @@
         <a class="box-item" href="https://github.com/Prajit-Sengupta"><span>Prajit Sengupta</span></a>
         <a class="box-item" href="https://github.com/alkaz1"><span>Alka Maurya</span></a>
         <a class="box-item" href="https://github.com/vikasz1"><span>Vikas Maurya</span></a>
-        <a class="box-item" href="https://github.com/naman-pokhriyal"><span>Naman Pokhriyal</span></a>
+        <a class="box-item" href="https://github.com/shreeyachatzz"><span>Shreeya Chatterji</span></a>
         <!-- Please maintain the alignment... -->
 
 
