--- a/Contributors.html
+++ b/Contributors.html
@@ -109,7 +109,6 @@
 
 
         <!-- Add to the bottom of the list -->
-
         <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
         <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
         <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
@@ -161,6 +160,7 @@
         <a class="box-item" href="https://github.com/evergreen2001"><span>Ido Evergreen</span></a>
         <a class="box-item" href="https://github.com/Zaheudev"><span>Zaharia Iulian</span></a>
         <a class="box-item" href="https://github.com/haryanapnx"><span>Haryfun</span></a>
+        <a class="box-item" href="https://github.com/ishaan-10"><span>Ishaan</span></a>
         <a class="box-item" href="https://github.com/Alok-873"><span>Alok Tripathi</span></a>
         <a class="box-item" href="https://github.com/qdtroemner"><span>Quentin Troemner</span></a>
         <a class="box-item" href="https://github.com/satyampgt4"><span>Satyam</span></a>
@@ -243,11 +243,22 @@
         <a class="box-item" href="https://github.com/NavdeepSinghBagga"><span>Navdeep Singh Bagga</span></a>
         <a class="box-item" href="https://github.com/tanishha"><span>Tanisha Chaudhary</span></a>
         <a class="box-item" href="https://github.com/malburo"><span>Malburo</span></a>
-        <a class="box-item" href="https://github.com/abhaygupta08"><span>Abhay Gupta</span></a>
-        
+        <a class="box-item" href="https://github.com/kingketan9"><span>Abhay Gupta</span></a>
+        <a class="box-item" href="https://github.com/ishaan-1n"><span>Ishaan</span></a>
+        <a class="box-item" href="https://github.com/manavg005"><span>Manav Gupta</span></a>
+        <a class="box-item" href="https://github.com/HarshitAditya27"><span>Harshit Aditya</span></a>
+        <a class="box-item" href="https://github.com/christianwidjayaa"><span>Christian Widjaya</span></a>
+        <a class="box-item" href="https://github.com/kingketan9"><span>Ketan Goyal</span></a>
+        <a class="box-item" href="https://github.com/Davjot"><span>Davjot Singh</span></a>
+        <a class="box-item" href="https://github.com/kushagra1912"><span>Kushagra Agrawal</span></a>
+        <a class="box-item" href="https://github.com/AyushAKumar-19"><span>Ayush Abhishek Kumar</span></a>
+        <a class="box-item" href="https://github.com/Prajit-Sengupta"><span>Prajit Sengupta</span></a>
+        <a class="box-item" href="https://github.com/alkaz1"><span>Alka Maurya</span></a>
+        <a class="box-item" href="https://github.com/vikasz1"><span>Vikas Maurya</span></a>
+        <a class="box-item" href="https://github.com/shreeyachatzz"><span>Shreeya Chatterji</span></a>
+        <a class="box-item" href="https://github.com/anshnarula5"><span>Ansh Narula</span></a>
 
-
-          <!-- Please maintain the alignment... -->
+        <!-- Please maintain the alignment... -->
 
 
       </div>
