--- a/Contributors.html
+++ b/Contributors.html
@@ -248,6 +248,7 @@
  <a class="box-item" href="https://github.com/OmanshArora"><span>Omansh</span></a>
        <a class="box-item" href="https://github.com/todoroki07"><span>Rufus</span></a>
       <a class="box-item" href="https://github.com/shinigamiii07"><span>Trideep</span></a>
+	      <a class="box-item" href="https://github.com/Lukman350"><span>Manoj Suru</span></a>
         
 
       </div>
