--- a/Contributors.html
+++ b/Contributors.html
@@ -259,7 +259,8 @@
         <a class="box-item" href="https://github.com/anshnarula5"><span>Ansh Narula</span></a>
         <a class="box-item" href="https://github.com/YellowFoxH4XOR"><span>Akshat Katiyar</span></a>
         <a class="box-item" href="https://github.com/VivekBhand"><span>Vivek Bhand</span></a>
-        
+        a class="box-item" href="https://github.com/pragatipal"><span>Pragati Pal</span></a>
+
         <!-- Please maintain the alignment... -->
 
 
