--- a/Contributors.html
+++ b/Contributors.html
@@ -111,6 +111,7 @@
         <!-- Add to the bottom of the list -->
         <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
         <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
+        <a class="box-item" href="https://github.com/nvnsaharan"><span>Naveen Saharan</span></a>
         <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
         <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
         <a class="box-item" href="https://github.com/shradha-khapra"><span>Shradha Khapra</span></a>
