--- a/Contributors.html
+++ b/Contributors.html
@@ -110,6 +110,7 @@
 
         <!-- Add to the bottom of the list -->
         <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
+        <a class="box-item" href="https://github.com/Asi-21"><span>Ashish Nain</span></a>
         <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
         <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
         <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
