--- a/Contributors.html
+++ b/Contributors.html
@@ -259,6 +259,7 @@
         <a class="box-item" href="https://github.com/anshnarula5"><span>Ansh Narula</span></a>
         <a class="box-item" href="https://github.com/YellowFoxH4XOR"><span>Akshat Katiyar</span></a>
         <a class="box-item" href="https://github.com/VivekBhand"><span>Vivek Bhand</span></a>
+        <a class="box-item" href="https://github.com/Shyam-2001"><span>Shyam Gupta</span></a>
         
         <!-- Please maintain the alignment... -->
 
