--- a/Contributors.html
+++ b/Contributors.html
@@ -264,6 +264,7 @@
         <a class=" box-item" href="https://github.com/Hackerrcracker"><span>Rahul Sharma</span></a>
         <a class="box-item" href="https://github.com/kindise"><span>Kindi Setiadi</span></a>
         <a class="box-item" href="https://github.com/Lukman350"><span>Manoj Suru</span></a>
+        <a class="box-item" href="https://github.com/fikriks"><span>Fikri Khairul Shaleh</span></a>
 
         <!-- Please maintain the alignment... -->
 
