added learn php

--- a/Contributors.html
+++ b/Contributors.html
@@ -267,6 +267,7 @@
         <a class="box-item" href="https://github.com/pragatipal"><span>Pragati Pal</span></a>
         <a class="box-item" href="https://github.com/nvnsaharan"><span>Naveen Saharan</span></a>
         <a class="box-item" href="https://github.com/FarhanFDjabari"><span>Farhan Fadhilah Djabari</span></a>
+        <a class="box-item" href="https://github.com/fikriks"><span>Fikri Khairul Shaleh</span></a>
 
 
         <!-- Please maintain the alignment... -->
