--- a/Contributors.html
+++ b/Contributors.html
@@ -261,13 +261,15 @@
         <a class="box-item" href="https://github.com/YellowFoxH4XOR"><span>Akshat Katiyar</span></a>
         <a class="box-item" href="https://github.com/VivekBhand"><span>Vivek Bhand</span></a>
         <a class="box-item" href="https://github.com/Anmol55555"><span>Anmol Kesarwani</span></a>
-        <a class="box-item" href="https://github.com/Aryan-Srivastava""><span>Aryan Srivastava</span></a>
+        <a class="box-item" href="https://github.com/Aryan-Srivastava"><span>Aryan Srivastava</span></a>
         <a class=" box-item" href="https://github.com/Hackerrcracker"><span>Rahul Sharma</span></a>
         <a class="box-item" href="https://github.com/kindise"><span>Kindi Setiadi</span></a>
         <a class="box-item" href="https://github.com/Lukman350"><span>Manoj Suru</span></a>
         <a class="box-item" href="https://github.com/pragatipal"><span>Pragati Pal</span></a>
         <a class="box-item" href="https://github.com/nvnsaharan"><span>Naveen Saharan</span></a>
         <a class="box-item" href="https://github.com/FarhanFDjabari"><span>Farhan Fadhilah Djabari</span></a>
+        <a class="box-item" href="https://github.com/Whitedevilfury"><span>Kingshuk Roy</span></a>
+                                                                    
 
 
         <!-- Please maintain the alignment... -->
