--- a/Contributors.html
+++ b/Contributors.html
@@ -268,7 +268,7 @@
         <a class="box-item" href="https://github.com/nvnsaharan"><span>Naveen Saharan</span></a>
         <a class="box-item" href="https://github.com/FarhanFDjabari"><span>Farhan Fadhilah Djabari</span></a>
         <a class="box-item" href="https://github.com/Asi-21"><span>Ashish Nain</span></a>
-
+        <a class="box-item" href="https://github.com/Shivamdpandey"><span>Shivam Dhananjay Pandey</span></a>
 
         <!-- Please maintain the alignment... -->
 
