--- a/Contributors.html
+++ b/Contributors.html
@@ -517,7 +517,7 @@
         <a class="box-item" href="https://github.com/VivekBhand"><span>Vivek Bhand</span></a>
         <a class="box-item" href="https://github.com/Anmol55555"><span>Anmol Kesarwani</span></a>
 
-        <a class="box-item" href="https://github.com/Aryan-Srivastava""><span>Aryan Srivastava</span></a>
+        <a class="box-item" href="https://github.com/Aryan-Srivastava"><span>Aryan Srivastava</span></a>
         <a class=" box-item" href="https://github.com/Hackerrcracker"><span>Rahul Sharma</span></a>
         <a class="box-item" href="https://github.com/kindise"><span>Kindi Setiadi</span></a>
         <a class="box-item" href="https://github.com/Lukman350"><span>Manoj Suru</span></a>
@@ -528,6 +528,7 @@
         <a class="box-item" href="https://github.com/mahatorakesh"><span>Rakesh Mahato</span></a>
         <a class="box-item" href="https://github.com/Palaksharma23"><span>Palak Sharma</span></a>
         <a class="box-item" href="https://github.com/Shivamdpandey"><span>Shivam Dhananjay Pandey</span></a>
+	<a class="box-item" href="https://github.com/sensaiankit"><span>Ankit</span></a>
 
 
 
