--- a/Contributors.html
+++ b/Contributors.html
@@ -528,7 +528,7 @@
         <a class="box-item" href="https://github.com/mahatorakesh"><span>Rakesh Mahato</span></a>
         <a class="box-item" href="https://github.com/Palaksharma23"><span>Palak Sharma</span></a>
         <a class="box-item" href="https://github.com/Shivamdpandey"><span>Shivam Dhananjay Pandey</span></a>
-	<a class="box-item" href="https://github.com/sensaiankit"><span>Ankit</span></a>
+	<a class="box-item" href="https://github.com/sensaiankit"><span>Ankit Yadav</span></a>
 
 
 
