Added code for unbounded knapsack of DP in C++

--- a/Contributors.html
+++ b/Contributors.html
@@ -535,6 +535,7 @@
         <a class="box-item" href="https://github.com/SuperAayush"><span>Aayush Sharma</span></a>
         <a class="box-item" href="https://github.com/bharath-acchu"><span>Bharath C S</span></a>
         <a class="box-item" href="https://github.com/sensaiankit"><span>Ankit Yadav</span></a>
+        <a class="box-item" href="https://github.com/KislaySingh10"><span>Kislay Singh</span></a>
 
 
 
