--- a/Contributors.html
+++ b/Contributors.html
@@ -535,7 +535,9 @@
         <a class="box-item" href="https://github.com/sensaiankit"><span>Ankit Yadav</span></a>
         <a class="box-item" href="https://github.com/KislaySingh10"><span>Kislay Singh</span></a>
 
-	<a class="box-item" href="https://github.com/Prakhar-creator"><span>Prakhar Mishra</span></a>							  
+	<a class="box-item" href="https://github.com/Prakhar-creator"><span>Prakhar Mishra</span></a>
+	<a class="box-item" href="https://github.com/Whitedevilfury"><span>Kingshuk Roy</span></a>							  
+	      
 
 
 
