--- a/Contributors.html
+++ b/Contributors.html
@@ -556,6 +556,7 @@
       <a class="box-item" href="https://github.com/Whitedevilfury"><span>Kingshuk Roy</span></a>
       <a class="box-item" href="https://github.com/Shyam-2001"><span>Shyam Gupta</span></a>
       <a class="box-item" href="https://github.com/yamini236"><span>Yamini Bansal</span></a>
+      <a class="box-item" href="https://github.com/sarvekash"><span>Sarvekash Aggarwal</span></a>
 
 
 
