--- a/Contributors.html
+++ b/Contributors.html
@@ -558,6 +558,7 @@
       <a class="box-item" href="https://github.com/yamini236"><span>Yamini Bansal</span></a>
       <a class="box-item" href="https://github.com/whatiskeptiname"><span>Susan Ghimire</span></a>
       <a class="box-item" href="https://github.com/whatiskeptiname"><spann>Nitul</span></a>
+      <a class="box-item" href="https://github.com/jash-kothari"><spann>Jash Kothari</span></a>
 
 
       <!-- Please maintain the alignment... -->
