--- a/Contributors.html
+++ b/Contributors.html
@@ -557,7 +557,7 @@
       <a class="box-item" href="https://github.com/Shyam-2001"><span>Shyam Gupta</span></a>
       <a class="box-item" href="https://github.com/yamini236"><span>Yamini Bansal</span></a>
       <a class="box-item" href="https://github.com/whatiskeptiname"><span>Susan Ghimire</span></a>
-
+      <a class="box-item" href="https://github.com/utsaverma2001-crypto"><span>Utsav Verma</span></a>
 
       <!-- Please maintain the alignment... -->
 
