--- a/Contributors.html
+++ b/Contributors.html
@@ -557,9 +557,9 @@
       <a class="box-item" href="https://github.com/Shyam-2001"><span>Shyam Gupta</span></a>
       <a class="box-item" href="https://github.com/yamini236"><span>Yamini Bansal</span></a>
       <a class="box-item" href="https://github.com/whatiskeptiname"><span>Susan Ghimire</span></a>
-      <a class="box-item" href="https://github.com/whatiskeptiname"><spann>Nitul</span></a>
-      <a class="box-item" href="https://github.com/jash-kothari"><spann>Jash Kothari</span></a>
-
+      <a class="box-item" href="https://github.com/whatiskeptiname"><span>Nitul</span></a>
+      <a class="box-item" href="https://github.com/jash-kothari"><span>Jash Kothari</span></a>
+      <a class="box-item" href="https://github.com/whatharshcodes"><span>Harsh</span></a>
 
       <!-- Please maintain the alignment... -->
 
