--- a/Contributors.html
+++ b/Contributors.html
@@ -559,8 +559,9 @@
       <a class="box-item" href="https://github.com/whatiskeptiname"><span>Susan Ghimire</span></a>
       <a class="box-item" href="https://github.com/whatiskeptiname"><spann>Nitul</span></a>
       <a class="box-item" href="https://github.com/jash-kothari"><spann>Jash Kothari</span></a>
+      <a class="box-item" href="https://github.com/thet3o/"><span>Matteo Vacalebri</span></a>
 
-
+      
       <!-- Please maintain the alignment... -->
 
 
