--- a/Contributors.html
+++ b/Contributors.html
@@ -559,6 +559,7 @@
       <a class="box-item" href="https://github.com/whatiskeptiname"><span>Susan Ghimire</span></a>
       <a class="box-item" href="https://github.com/whatiskeptiname"><spann>Nitul</span></a>
       <a class="box-item" href="https://github.com/jash-kothari"><spann>Jash Kothari</span></a>
+      <a class="box-item" href="https://github.com/SimonUR"><spann>Simon</span></a>
 
 
       <!-- Please maintain the alignment... -->
