--- a/Contributors.html
+++ b/Contributors.html
@@ -569,6 +569,7 @@
       <a class="box-item" href="https://github.com/whatiskeptiname"><span>Susan Ghimire</span></a>
       <a class="box-item" href="https://github.com/whatiskeptiname"><spann>Nitul</span></a>
       <a class="box-item" href="https://github.com/jash-kothari"><spann>Jash Kothari</span></a>
+      <a class="box-item" href="https://github.com/arunim-iiitlCS"><spann>Arunim Singhal</span></a>
 
 
       <!-- Please maintain the alignment... -->
