--- a/Contributors.html
+++ b/Contributors.html
@@ -560,6 +560,7 @@
       <a class="box-item" href="https://github.com/whatiskeptiname"><spann>Nitul</span></a>
       <a class="box-item" href="https://github.com/jash-kothari"><spann>Jash Kothari</span></a>
        <a class="box-item" href="https://github.com/jash-kothari"><spann>Tandrima Singha</span></a>
+      <a class="box-item" href="https://github.com/KVChandrashekar/"><spann>Chandrashekar K V</span></a>
 
 
       <!-- Please maintain the alignment... -->
