Added my profile + corrected some alignments

--- a/Contributors.html
+++ b/Contributors.html
@@ -332,9 +332,9 @@
       __  __              __    __          __                 ____             __
     / / / /____ _ _____ / /__ / /_ ____   / /_   ___   _____ / __/___   _____ / /_
     / /_/ // __ `// ___// //_// __// __ \ / __ \ / _ \ / ___// /_ / _ \ / ___// __/
-  / __  // /_/ // /__ / ,<  / /_ / /_/ // /_/ //  __// /   / __//  __/(__  )/ /_
+  / __  ///_/ // /__ / ,<  / /_ / /_/ // /_/ //  __// /   / __//  __/(__  )/ /_
   /_/ /_/ \__,_/ \___//_/|_| \__/ \____//_.___/ \___//_/   /_/   \___//____/ \__/
-                                              i just want a t-shirt at this point
+                                              I just want a "free" T-Shirt at this point
   -->
   <!--Navbar-->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm">
@@ -535,7 +535,7 @@
       <a class="box-item" href="https://github.com/VivekBhand"><span>Vivek Bhand</span></a>
       <a class="box-item" href="https://github.com/Anmol55555"><span>Anmol Kesarwani</span></a>
       <a class="box-item" href="https://github.com/Aryan-Srivastava"><span>Aryan Srivastava</span></a>
-      <a class=" box-item" href="https://github.com/Hackerrcracker"><span>Rahul Sharma</span></a>
+      <a class="box-item" href="https://github.com/Hackerrcracker"><span>Rahul Sharma</span></a>
       <a class="box-item" href="https://github.com/kindise"><span>Kindi Setiadi</span></a>
       <a class="box-item" href="https://github.com/Lukman350"><span>Manoj Suru</span></a>
       <a class="box-item" href="https://github.com/pragatipal"><span>Pragati Pal</span></a>
@@ -559,9 +559,10 @@
       <a class="box-item" href="https://github.com/whatiskeptiname"><span>Susan Ghimire</span></a>
       <a class="box-item" href="https://github.com/whatiskeptiname"><spann>Nitul</span></a>
       <a class="box-item" href="https://github.com/jash-kothari"><spann>Jash Kothari</span></a>
-       <a class="box-item" href="https://github.com/jash-kothari"><spann>Tandrima Singha</span></a>
+      <a class="box-item" href="https://github.com/jash-kothari"><spann>Tandrima Singha</span></a>
       <a class="box-item" href="https://github.com/KVChandrashekar/"><spann>Chandrashekar K V</span></a>
-
+      <a class="box-item" href="https://github.com/jash-desai"><spann>Jash Desai</span></a>
+      
 
       <!-- Please maintain the alignment... -->
 
