--- a/Contributors.html
+++ b/Contributors.html
@@ -561,6 +561,8 @@
       <a class="box-item" href="https://github.com/jash-kothari"><spann>Jash Kothari</span></a>
        <a class="box-item" href="https://github.com/jash-kothari"><spann>Tandrima Singha</span></a>
       <a class="box-item" href="https://github.com/KVChandrashekar/"><spann>Chandrashekar K V</span></a>
+      <a class="box-item" href="https://github.com/rupayanxn/"><spann>Rupayan Bhattacharjee</span></a>
+     
 
 
       <!-- Please maintain the alignment... -->
