--- a/Contributors.html
+++ b/Contributors.html
@@ -559,10 +559,9 @@
       <a class="box-item" href="https://github.com/whatiskeptiname"><span>Susan Ghimire</span></a>
       <a class="box-item" href="https://github.com/whatiskeptiname"><spann>Nitul</span></a>
       <a class="box-item" href="https://github.com/jash-kothari"><spann>Jash Kothari</span></a>
-       <a class="box-item" href="https://github.com/jash-kothari"><spann>Tandrima Singha</span></a>
+      <a class="box-item" href="https://github.com/jash-kothari"><spann>Tandrima Singha</span></a>
       <a class="box-item" href="https://github.com/KVChandrashekar/"><spann>Chandrashekar K V</span></a>
-
-
+      <a class="box-item" href="https://github.com/wildchaser1703/"><spann>Toshali Mohapatra</span></a>
       <!-- Please maintain the alignment... -->
 
 
