--- a/Contributors.html
+++ b/Contributors.html
@@ -561,6 +561,7 @@
       <a class="box-item" href="https://github.com/jash-kothari"><spann>Jash Kothari</span></a>
        <a class="box-item" href="https://github.com/jash-kothari"><spann>Tandrima Singha</span></a>
       <a class="box-item" href="https://github.com/KVChandrashekar/"><spann>Chandrashekar K V</span></a>
+      <a class="box-item" href="https://github.com/kevadamar"><spann>Keva Damar Galih</span></a>
 
 
       <!-- Please maintain the alignment... -->
