--- a/Contributors.html
+++ b/Contributors.html
@@ -560,16 +560,17 @@
       <a class="box-item" href="https://github.com/whatiskeptiname"><span>Susan Ghimire</span></a>
 
 
-      <a class="box-item" href="https://github.com/NitulKalita"><spann>Nitul</span></a>
-      <a class="box-item" href="https://github.com/jash-kothari"><spann>Jash Kothari</span></a>
-      <a class="box-item" href="https://github.com/SimonUR"><spann>Simon</span></a>
+      <a class="box-item" href="https://github.com/NitulKalita"><span>Nitul</span></a>
+      <a class="box-item" href="https://github.com/jash-kothari"><span>Jash Kothari</span></a>
+      <a class="box-item" href="https://github.com/SimonUR"><span>Simon</span></a>
 
-       <a class="box-item" href="https://github.com/tandrimasingha"><spann>Tandrima Singha</span></a>
-      <a class="box-item" href="https://github.com/KVChandrashekar/"><spann>Chandrashekar K V</span></a>
-    <a class="box-item" href="https://github.com/sarvekash"><span>Sarvekash Aggarwal</span></a>
-    <a class="box-item" href="https://github.com/mthakur7"><span>Manju Thakur</span></a>
-    <a class="box-item" href="https://github.com/utsaverma2001-crypto"><spann>Utsav Verma</span></a>
-    <a class="box-item" href="https://github.com/whatharshcodes"><span>Harsh</span></a>
+      <a class="box-item" href="https://github.com/tandrimasingha"><span>Tandrima Singha</span></a>
+      <a class="box-item" href="https://github.com/KVChandrashekar/"><span>Chandrashekar K V</span></a>
+      <a class="box-item" href="https://github.com/sarvekash"><span>Sarvekash Aggarwal</span></a>
+      <a class="box-item" href="https://github.com/mthakur7"><span>Manju Thakur</span></a>
+      <a class="box-item" href="https://github.com/utsaverma2001-crypto"><span>Utsav Verma</span></a>
+      <a class="box-item" href="https://github.com/whatharshcodes"><span>Harsh</span></a>
+      <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
 
 
 
