--- a/Contributors.html
+++ b/Contributors.html
@@ -576,19 +576,19 @@
 <a class="box-item" href="https://github.com/jash-kothari"><span>Jash Kothari</span></a>
 <a class="box-item" href="https://github.com/SimonUR"><span>Simon</span></a>
 <a class="box-item" href="https://github.com/tandrimasingha"><span>Tandrima Singha</span></a>
-<a class="box-item" href="https://github.com/KVChandrashekar/"><span>Chandrashekar K V</span></a>
+<a class="box-item" href="https://github.com/KVChandrashekar"><span>Chandrashekar K V</span></a>
 <a class="box-item" href="https://github.com/sarvekash"><span>Sarvekash Aggarwal</span></a>
 <a class="box-item" href="https://github.com/mthakur7"><span>Manju Thakur</span></a>
 <a class="box-item" href="https://github.com/utsaverma2001-crypto"><span>Utsav Verma</span></a>
 <a class="box-item" href="https://github.com/whatharshcodes"><span>Harsh</span></a>
-<a class="box-item" href="https://github.com/thet3o/"><span>Matteo Vacalebri</span></a>
+<a class="box-item" href="https://github.com/thet3o"><span>Matteo Vacalebri</span></a>
 <a class="box-item" href="https://github.com/arunim-iiitlCS"><span>Arunim Singhal</span></a>
 <a class="box-item" href="https://github.com/ahad-abd"><span>Abdul Ahad</span></a>
-<a class="box-item" href="https://github.com/MFR414/"><span>M Firmansyah Rifai</span></a>
+<a class="box-item" href="https://github.com/MFR414"><span>M Firmansyah Rifai</span></a>
 <a class="box-item" href="https://github.com/AdityaSawant21"><spann>Aditya Sawant</span></a>
 <a class="box-item" href="https://github.com/kevadamar"><spann>Keva Damar Galih</span></a>
 <a class="box-item" href="https://github.com/a-ayush19"><span>Ayush Awasthi</span></a>
-<a class="box-item" href="https://github.com/SamarthSawhney/"><spann>Samarth Sawhney</span></a>
+<a class="box-item" href="https://github.com/SamarthSawhney"><spann>Samarth Sawhney</span></a>
 <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
 
 
