--- a/Contributors.html
+++ b/Contributors.html
@@ -583,7 +583,8 @@
 <a class="box-item" href="https://github.com/a-ayush19"><span>Ayush Awasthi</span></a>
 <a class="box-item" href="https://github.com/SamarthSawhney"><spann>Samarth Sawhney</span></a>
 <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
-
+<a class="box-item" href="https://github.com/amazing-AK"><span>Aditya Krishna</span></a>
+      
 
 
       <!-- Please maintain the alignment... -->
