added name in contributor.html and added a c++ program reverse_aray

--- a/Contributors.html
+++ b/Contributors.html
@@ -233,7 +233,7 @@
 <a class="box-item" href="https://github.com/doniambarita"><span>Doni Ambarita</span></a>
 <a class="box-item" href="https://github.com/matheusdaluz"><span>Matheus da Luz</span></a>  
 	      <a class="box-item" href="https://github.com/cheetosmaster"><span>cheetosmaster</span></a>  
-
+<a class="box-item" href="https://github.com/Dimplesinha"><span>Dimple Sinha</span></a>  
 
       </div>
     </div>
