--- a/Contributors.html
+++ b/Contributors.html
@@ -584,6 +584,7 @@
 <a class="box-item" href="https://github.com/SamarthSawhney"><spann>Samarth Sawhney</span></a>
 <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
 <a class="box-item" href="https://github.com/nyctonio"><span>Ritesh Kumar</span></a>
+<a class="box-item" href="https://github.com/PrajaktaSathe"><span>Prajakta Sathe</span></a>
 
 
 
