--- a/Contributors.html
+++ b/Contributors.html
@@ -585,7 +585,7 @@
 <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
 <a class="box-item" href="https://github.com/nyctonio"><span>Ritesh Kumar</span></a>
 <a class="box-item" href="https://github.com/geeky01adarsh"><span>Adarsh Navneet Sinha</span></a>
-
+<a class="box-item" href="https://github.com/RAJASETHI"><span>Raja Sethi</span></a>
 
 
       <!-- Please maintain the alignment... -->
