--- a/Contributors.html
+++ b/Contributors.html
@@ -585,6 +585,8 @@
 <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
 <a class="box-item" href="https://github.com/nyctonio"><span>Ritesh Kumar</span></a>
 <a class="box-item" href="https://github.com/geeky01adarsh"><span>Adarsh Navneet Sinha</span></a>
+<a class="box-item" href="https://github.com/priyanshu-28"><span>Priyanshu Pathak</span></a>
+
 
 
 
