--- a/Contributors.html
+++ b/Contributors.html
@@ -583,6 +583,7 @@
 <a class="box-item" href="https://github.com/SamarthSawhney"><spann>Samarth Sawhney</span></a>
 <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
 <a class="box-item" href="https://github.com/alfaniM"><span>M. Aulia Alfani</span></a>
+<a class="box-item" href="https://github.com/soumyajit1999"><span>Soumyajit Sen</span></a>
 
 <a class="box-item" href="https://github.com/vishnuramv"><span>Vishnu Ram V</span></a>
 
