--- a/Contributors.html
+++ b/Contributors.html
@@ -593,6 +593,8 @@
     <a class="box-item" href="https://github.com/Kaustubh251002"><span>Kaustubh Mishra</span></a>
     <a class="box-item" href="https://github.com/priyanshu-28"><span>Priyanshu Pathak</span></a>
     <a class="box-item" href="https://github.com/amazing-AK"><span>Aditya Krishna</span></a>
+      <a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
+
 
 
 
