--- a/Contributors.html
+++ b/Contributors.html
@@ -583,17 +583,15 @@
 <a class="box-item" href="https://github.com/SamarthSawhney"><spann>Samarth Sawhney</span></a>
 <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
 <a class="box-item" href="https://github.com/alfaniM"><span>M. Aulia Alfani</span></a>
-
 <a class="box-item" href="https://github.com/vishnuramv"><span>Vishnu Ram V</span></a>
-
 <a class="box-item" href="https://github.com/nyctonio"><span>Ritesh Kumar</span></a>
 <a class="box-item" href="https://github.com/geeky01adarsh"><span>Adarsh Navneet Sinha</span></a>
 <a class="box-item" href="https://github.com/RAJASETHI"><span>Raja Sethi</span></a>
-    <a class="box-item" href="https://github.com/PrajaktaSathe"><span>Prajakta Sathe</span></a>
-    <a class="box-item" href="https://github.com/Kaustubh251002"><span>Kaustubh Mishra</span></a>
-    <a class="box-item" href="https://github.com/priyanshu-28"><span>Priyanshu Pathak</span></a>
-    <a class="box-item" href="https://github.com/amazing-AK"><span>Aditya Krishna</span></a>
-
+<a class="box-item" href="https://github.com/PrajaktaSathe"><span>Prajakta Sathe</span></a>
+<a class="box-item" href="https://github.com/Kaustubh251002"><span>Kaustubh Mishra</span></a>
+<a class="box-item" href="https://github.com/priyanshu-28"><span>Priyanshu Pathak</span></a>
+<a class="box-item" href="https://github.com/amazing-AK"><span>Aditya Krishna</span></a>
+<a class="box-item" href="https://github.com/Preetojha08"><span>Preet Ojha</span></a>
 
 
 
