Fix heading visibility

--- a/Contributors.html
+++ b/Contributors.html
@@ -365,7 +365,7 @@
   </nav>
   <div class="content">
     <div class="container">
-      <span>Contributors </span>
+      <div class="heading">Contributors </div>
 
       <div class="heart"></div>
       <label class="theme-switch" for="checkbox">
