--- a/Contributors.html
+++ b/Contributors.html
@@ -387,10 +387,7 @@
         <div class="slider round"></div>
       </label>
 
-
-
 <a class="box-item" href="https://github.com/fineanmol"><span>Anmol Agarwal</span></a>
-
 <a class="box-item" href="https://github.com/Amitava123"><span>Amitava Mitra</span></a>
 <a class="box-item" href="https://github.com/philson-philip"><span>Philson Philip</span></a>
 <a class="box-item" href="https://github.com/SHIV1003"><span>Shivam Goyal</span></a>
@@ -583,15 +580,8 @@
 <a class="box-item" href="https://github.com/a-ayush19"><span>Ayush Awasthi</span></a>
 <a class="box-item" href="https://github.com/SamarthSawhney"><spann>Samarth Sawhney</span></a>
 <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
-
-
-
+<a class="box-item" href="https://github.com/adipurnamk"><span>Muhammad Adipurna Kusumawardana</span></a>
       <!-- Please maintain the alignment... -->
-
-
-
-
-
 
     </div>
   </div>
