--- a/Contributors.html
+++ b/Contributors.html
@@ -594,6 +594,7 @@
     <a class="box-item" href="https://github.com/priyanshu-28"><span>Priyanshu Pathak</span></a>
     <a class="box-item" href="https://github.com/amazing-AK"><span>Aditya Krishna</span></a>
       <a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
+      <a class="box-item" href="https://github.com/zaabdn"><span>Zainal Abidin</span></a>
 
 
 
