--- a/Contributors.html
+++ b/Contributors.html
@@ -589,12 +589,12 @@
 <a class="box-item" href="https://github.com/nyctonio"><span>Ritesh Kumar</span></a>
 <a class="box-item" href="https://github.com/geeky01adarsh"><span>Adarsh Navneet Sinha</span></a>
 <a class="box-item" href="https://github.com/RAJASETHI"><span>Raja Sethi</span></a>
-    <a class="box-item" href="https://github.com/PrajaktaSathe"><span>Prajakta Sathe</span></a>
-    <a class="box-item" href="https://github.com/Kaustubh251002"><span>Kaustubh Mishra</span></a>
-    <a class="box-item" href="https://github.com/priyanshu-28"><span>Priyanshu Pathak</span></a>
-    <a class="box-item" href="https://github.com/amazing-AK"><span>Aditya Krishna</span></a>
-      <a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
-
+<a class="box-item" href="https://github.com/PrajaktaSathe"><span>Prajakta Sathe</span></a>
+<a class="box-item" href="https://github.com/Kaustubh251002"><span>Kaustubh Mishra</span></a>
+<a class="box-item" href="https://github.com/priyanshu-28"><span>Priyanshu Pathak</span></a>
+<a class="box-item" href="https://github.com/amazing-AK"><span>Aditya Krishna</span></a>
+<a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
+<a class="box-item" href="https://github.com/Ttecs"><span>Tharaka Bandara</span></a>
 
 
 
