--- a/Contributors.html
+++ b/Contributors.html
@@ -597,7 +597,7 @@
 <a class="box-item" href="https://github.com/amazing-AK"><span>Aditya Krishna</span></a>
 <a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
 <a class="box-item" href="https://github.com/Ttecs"><span>Tharaka Bandara</span></a>
-
+<a class="box-item" href="https://github.com/Ambareen09"><span>Ambareen Azam</span></a>
 
 
 
