Updated contributors.html and upddated alignment

--- a/Contributors.html
+++ b/Contributors.html
@@ -585,9 +585,7 @@
 <a class="box-item" href="https://github.com/highflyer910"><span>Thea M.</span></a>
 <a class="box-item" href="https://github.com/alfaniM"><span>M. Aulia Alfani</span></a>
 <a class="box-item" href="https://github.com/soumyajit1999"><span>Soumyajit Sen</span></a>
-
 <a class="box-item" href="https://github.com/vishnuramv"><span>Vishnu Ram V</span></a>
-
 <a class="box-item" href="https://github.com/nyctonio"><span>Ritesh Kumar</span></a>
 <a class="box-item" href="https://github.com/geeky01adarsh"><span>Adarsh Navneet Sinha</span></a>
 <a class="box-item" href="https://github.com/RAJASETHI"><span>Raja Sethi</span></a>
@@ -597,7 +595,7 @@
 <a class="box-item" href="https://github.com/amazing-AK"><span>Aditya Krishna</span></a>
 <a class="box-item" href="https://github.com/yashjain1974"><span>Yash jain</span></a>
 <a class="box-item" href="https://github.com/Ttecs"><span>Tharaka Bandara</span></a>
-
+<a class="box-item" href="https://github.com/DanDias00"><span>Dan Dias Abeyesinghe</span></a>
 
 
 
