--- a/Contributors.html
+++ b/Contributors.html
@@ -326,7 +326,8 @@
         <a class="box-item" href="https://github.com/Krishnapal-rajput"><span>Krishnapal Rajput</span></a>
         <a class="box-item" href="https://github.com/SamirKaushik"><span>Samir Kaushik</span></a>
         <a class="box-item" href="https://github.com/Aman1905"><span>Aman Chopra</span></a>
-
+        <a class="box-item" href="https://github.com/mofazil17"><span>Mohamed Fazil</span></a>
+        
         <!-- Please maintain the alignment... -->
 
 
