--- a/Contributors.html
+++ b/Contributors.html
@@ -326,6 +326,9 @@
         <a class="box-item" href="https://github.com/Krishnapal-rajput"><span>Krishnapal Rajput</span></a>
         <a class="box-item" href="https://github.com/SamirKaushik"><span>Samir Kaushik</span></a>
         <a class="box-item" href="https://github.com/Aman1905"><span>Aman Chopra</span></a>
+        <a class="box-item" href="https://github.com/Frostbite22"><span>Fares Landoulsi</span></a>
+
+        
 
         <!-- Please maintain the alignment... -->
 
