--- a/Contributors.html
+++ b/Contributors.html
@@ -97,7 +97,7 @@
       <div class="wrapper">
         <div>
           <h1 class="animated rubberBand delay-4s">Contributors</h1>
-          <p class="animated rubberBand delay-4s">Add yourself to the list if you contribute.</p>
+          <p class="animated rubberBand delay-4s">Add Yourself To The List If You Contribute.</p>
         </div>
         <label class="theme-switch" for="checkbox">
           <input type="checkbox" id="checkbox" />
@@ -327,7 +327,8 @@
         <a class="box-item" href="https://github.com/SamirKaushik"><span>Samir Kaushik</span></a>
         <a class="box-item" href="https://github.com/Aman1905"><span>Aman Chopra</span></a>
         <a class="box-item" href="https://github.com/mofazil17"><span>Mohamed Fazil</span></a>
-        <a class="box-item" href="https://github.com/Tejaswi-Kumar"><span>Tejaswi Kumar</span></a>
+        <a class="box-item" href="https://github.com/Deeksha1502"><span>Tejaswi Kumar</span></a>
+
 
         
         <!-- Please maintain the alignment... -->
