--- a/Contributors.html
+++ b/Contributors.html
@@ -328,6 +328,8 @@
         <a class="box-item" href="https://github.com/Aman1905"><span>Aman Chopra</span></a>
         <a class="box-item" href="https://github.com/mofazil17"><span>Mohamed Fazil</span></a>
         <a class="box-item" href="https://github.com/Tejaswi-Kumar"><span>Tejaswi Kumar</span></a>
+        <a class="box-item" href="https://github.com/Devika0713"><span>Devika U H</span></a>
+
 
         
         <!-- Please maintain the alignment... -->
