--- a/portfolio.html
+++ b/portfolio.html
@@ -145,7 +145,10 @@
   .nav-list a {
     display: block;
     font-size: 2.2rem;
-    padding: 2rem;
+    padding: 1.0rem;
+    border-radius: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;  
   }
   
   .nav-list a:hover {
