--- a/Contributors.html
+++ b/Contributors.html
@@ -571,7 +571,7 @@ cses
         <a class="box-item" href="https://github.com/mofazil17"><span>Mohamed Fazil</span></a>
         <a class="box-item" href="https://github.com/Tejaswi-Kumar"><span>Tejaswi Kumar</span></a>
         <a class="box-item" href="https://github.com/TahuTech"><span>Nur Ali Sholikhin</span></a>
-
+        <a class="box-item" href="https://github.com/deepankarvarma"><spanDeepankar Varma</span></a>
 
 
         <!-- Please maintain the alignment... -->
